# nnn

./: .gitignore  .pre-commit-config.yaml  CITATION.bib  Kolmogorov.sh  KolmogorovFlow.sh  Kursiv.sh  L96.sh  Lorenz96.sh  Project.toml  README.md  kurasiv.jl  kursiv.sh  kursiv_ref.jl  lorenz96.jl  lorenz96_data.jl  lorenz96_ref.jl  lorenz96_rom.jl  main.sh  mkdocs.yml  preprocessing.jl  pyproject.toml  read_nc.py  requirements.txt  setup.sh  slurm.slurm  toy_posterior.py  vae.jl
KolmogorovFlow/: analyze.py  index.md  main.py  make_data.py  spectral_forced_turbulence.py
Kursiv/: index.md  main.py  make_data.py  methods.py  utils.py
Lorenz96/: base.py  base.sh  base_ensembles.py  base_ensembles.sh  baseline.py  baseline.sh  cde.ipynb  cde.py  cde.sh  index.md  lorenz96_acceleration.ipynb  lorenz96_acceleration.py  lorenz96_solver.jl  main.py  main.sh  make_data.py  methods.py  ncde.py  ncde.sh  networks.py  utils.py
archive/: flow.py  lorenz96_acceleration.jl  ncde.py  toy_posterior.py  vae.jl
archive/julia_solver/: kursiv_ref.jl  lorenz96_solver.jl
bibliography/: library.bib
checkpoint/: test.jld2
docs/: DataAssimilation.md  Proposal.md
docs/BayesianInference/: VariationalAutoEncoder.md
docs/Model/: KuramotoSivashinsky.md  Lorenz96.md
docs/Notes/: Idea.md  NontrivialObservationOperator.md  OfflineDataAssimilation.md  Sketch.md  (+1 more)
figures/: L96.jl  L96.sh  Project.toml  chaos.jl  chaos.py  chaos.sh  chaotic.py  kolmogorov.jl  kolmogorov.sh  kursiv.jl  kursiv.sh  kursiv_2.sh  kursiv_anim.jl  lorenz96_anim.jl
julia_solver/: Project.toml  compare_fe_rk.jl  kursiv.py  lorenz96_solver.jl
nnn/: __init__.py  _cores.py  data_utils.py  equations.py  filters.py  flow.py  models.py  networks.py  nudgings.py  observation.py  utils.py
oda/: data_containers.py  data_utils.py  filters.py  methods.py  models.py  networks.py  observation.py  problems.py  utils.py
scripts/: Kolmogorov.sh  unroll.sh
src/: DALS.jl  LatentDA.jl  problems.jl  read_temperature.jl
(+27 files in other folders)
