[project]
name = "oda"
version = "0.0.1"
description = "offline data assimilation"
readme = "README.md"
requires-python ="~=3.11"
authors = [
  {name = "Jaemin Oh", email = "jaeminoh.math@gmail.com"},
]
urls = {repository = "https://github.com/jaeminoh/ODA" }
dependencies = [
    "equinox>=0.11.12",
    "jax==0.5.0",
    "jaxopt>=0.8.3",
    "matplotlib>=3.10.1",
    "optax>=0.2.4",
    "tqdm>=4.67.1",
]

[tool.setuptools]
packages = ["oda"]

[tool.ruff.lint]
ignore = ["F722"]
