[project]
name = "nnn"
version = "0.1.0"
description = "Neural network nudging"
readme = "README.md"
requires-python ="~=3.11"
authors = [
  {name = "Jaemin Oh", email = "jaeminoh.math@gmail.com"},
]
urls = {repository = "https://github.com/jaeminoh/nnn" }
dependencies = [
    "beartype>=0.20.2",
    "diffrax>=0.7.0",
    "equinox>=0.11.12",
    "fire>=0.7.0",
    "ipykernel>=6.29.5",
    "jax-cfd>=0.2.1",
    "jax[cuda]==0.5.0",
    "jaxopt>=0.8.3",
    "matplotlib>=3.10.1",
    "optax>=0.2.4",
    "pre-commit>=4.2.0",
    "ruff>=0.11.5",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "xarray>=2025.4.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build]
include = ["nnn/*"]

[tool.ruff.lint]
ignore = ["F722"]
